--- a/src/pages/Register/register.scss
+++ b/src/pages/Register/register.scss
@@ -1,11 +1,47 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+  }
+
 .main-page{
+display: flex;
+height: 100%;
+width: 100%;
+box-sizing: border-box;
 
 }
 
 .left {
+flex: 1;
+height: 100%;
+display: flex;
+align-items: center; /* Tengah secara vertikal */
+justify-content: center; 
 
+height: 100%;
+.bg-image{
+   margin: auto;
+    width: 70%;
+    height: 70%;
+    object-fit: cover;
+}
 }
 
 .right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+width: 460px;
+background-color: white;
+height: 100%;
+padding: 30px;
+
+.title{
+    font-size: 30px;
+    font-weight: bold;
     
 }
+}
+
+// membagi pages register jadi 2 halaman
