--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -7,6 +7,7 @@
     border-radius: 8px;
     border: none;
     color: white;
+    cursor: pointer;
 }
 .button:hover{
     background-color: #DF826C;
