styling[item blog and Pagination]

--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -1,7 +1,7 @@
 .button{
     padding: 12px;
     font-size: 16px;
-    background-color: #8ADAB2;
+    background-color: black;
     width: 100%;
     box-sizing: border-box;
     border-radius: 8px;
@@ -10,5 +10,5 @@
     cursor: pointer;
 }
 .button:hover{
-    background-color: #DF826C;
+    background-color: grey;
 }
