--- a/src/components/molecules/Header/header.scss
+++ b/src/components/molecules/Header/header.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    background-color: pink;
+    background-color: black;
     height: 15px;
     .logo-app{
 font-size: 20px;
