--- a/src/pages/MainApp/mainApp.scss
+++ b/src/pages/MainApp/mainApp.scss
@@ -4,6 +4,10 @@
     height: 100vh;
 
     .content-wrapper{
+        max-width: 1000px;
+        
+        margin: auto;
+        width: 100%;
         flex: 1;
     }
 }
