styling[page create blog post]

--- a/src/components/molecules/BlogItem/blogItem.scss
+++ b/src/components/molecules/BlogItem/blogItem.scss
@@ -1,35 +1,7 @@
-// .blog-item{
-//     width: 50%;
-//     border-radius: 8px;
-//     margin-bottom: 20px;
-//     overflow: hidden;
-//     box-shadow: 5px 6px 14px grey;
-//     .image-thumb{
-//         width: 100%;
-//         height: 200px;
-//         object-fit: cover;
-//     }
-//     .content-detail{
-//         padding: 16px;
-//         .title{
-//       margin: 0px;
-//       font-size: 20px;
-//       font-weight: bold;
-//         }
-//         .author{
-//       margin: 0px;
-//       margin-top: 4px;
-//       font-size: 12px;
-//       color: grey;
-//         }
-//         .body{
-//       margin: 0px;
-//       margin-top: 18px;
+.card-text{
+    font-family: 'Hedvig Letters Serif', serif;
+}
 
-//         }
-//     }
-// }
-
-
-
-
+.minute{
+    color: grey;
+}
