--- a/src/components/molecules/Header/header.scss
+++ b/src/components/molecules/Header/header.scss
@@ -2,19 +2,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 40px;
+    padding: 30px 40px;
     background-color: black;
     height: 15px;
     .logo-app{
-font-size: 20px;
-font-weight: bold;
+font-size: 15px;
 color: white;
 margin: 0px;
     }
     .menu-item{
         font-size: 18px;
         color: white;
-        text-decoration: underline;
+        margin-top: 16px;
         cursor: pointer;
     }
 }
